--- a/package.json
+++ b/package.json
@@ -6,30 +6,30 @@
   "license": "MIT",
   "main": "index.js",
   "scripts": {
-    "build": "webpack",
+    "build": "webpack --config webpack.config.build.js",
     "lint": "./node_modules/eslint/bin/eslint.js src",
-    "start": "hjs-dev-server"
+    "start": "webpack-dev-server"
   },
   "devDependencies": {
     "autoprefixer": "^6.3.1",
     "babel": "^6.3.26",
+    "babel-core": "^6.3.26",
     "babel-loader": "^6.2.1",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
-    "babel-preset-react-hmre": "^1.0.1",
-    "babel-register": "^6.4.3",
+    "baggage-loader": "^0.2.4",
     "css-loader": "^0.23.1",
     "eslint": "^1.10.3",
     "eslint-plugin-react": "^3.16.1",
     "file-loader": "^0.8.5",
-    "hjs-webpack": "^7.0.0-beta5",
+    "html-webpack-plugin": "^2.7.2",
+    "json-loader": "^0.5.4",
     "postcss-loader": "^0.8.0",
     "react": "^0.14.6",
-    "react-addons-css-transition-group": "^0.14.6",
     "react-dom": "^0.14.6",
     "style-loader": "^0.13.0",
-    "stylus-loader": "^1.5.0",
-    "webpack": "^1.12.11",
+    "stylus-loader": "^1.5.1",
+    "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.1"
   }
 }
