--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --config webpack.config.build.js",
+    "build": "NODE_ENV=production webpack --config webpack.config.build.js",
     "lint": "./node_modules/eslint/bin/eslint.js src",
     "start": "webpack-dev-server"
   },
@@ -17,6 +17,7 @@
     "babel-loader": "^6.2.1",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
+    "babel-preset-react-hmre": "^1.0.1",
     "baggage-loader": "^0.2.4",
     "css-loader": "^0.23.1",
     "eslint": "^1.10.3",
