--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "eslint": "^1.10.3",
     "eslint-plugin-react": "^3.16.1",
     "file-loader": "^0.8.5",
+    "grunt": "^0.4.5",
+    "grunt-webpack": "^1.0.11",
     "html-webpack-plugin": "^2.7.2",
     "json-loader": "^0.5.4",
     "postcss-loader": "^0.8.0",
