--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "grunt-webpack": "^1.0.11",
     "html-webpack-plugin": "^2.7.2",
     "json-loader": "^0.5.4",
+    "offline-plugin": "^2.0.2",
     "postcss-loader": "^0.8.0",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
