--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "scripts": {
     "build": "NODE_ENV=production webpack --config webpack.config.build.js",
     "lint": "./node_modules/eslint/bin/eslint.js src",
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server",
+    "test": "karma start --single-run",
+    "test-dev": "karma start"
   },
   "devDependencies": {
     "autoprefixer": "^6.3.1",
@@ -19,15 +21,26 @@
     "babel-preset-react": "^6.3.13",
     "babel-preset-react-hmre": "^1.0.1",
     "baggage-loader": "^0.2.4",
+    "chai": "^3.4.1",
     "css-loader": "^0.23.1",
     "eslint": "^1.10.3",
     "eslint-plugin-react": "^3.16.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "grunt": "^0.4.5",
+    "grunt-karma": "^0.12.1",
     "grunt-webpack": "^1.0.11",
     "html-webpack-plugin": "^2.7.2",
     "json-loader": "^0.5.4",
+    "karma": "^0.13.19",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^0.2.2",
+    "karma-firefox-launcher": "^0.1.7",
+    "karma-ie-launcher": "^0.2.0",
+    "karma-mocha": "^0.2.1",
+    "karma-safari-launcher": "^0.1.1",
+    "karma-webpack": "^1.7.0",
+    "mocha": "^2.3.4",
     "offline-plugin": "^2.0.2",
     "postcss-loader": "^0.8.0",
     "react": "^0.14.6",
