--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "postcss-loader": "^0.8.0",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
+    "seedrandom": "^2.4.2",
     "style-loader": "^0.13.0",
     "stylus-loader": "^1.5.1",
     "webpack": "^1.12.9",
