--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "grunt": "^0.4.5",
+    "grunt-eslint": "^17.3.1",
     "grunt-karma": "^0.12.1",
     "grunt-webpack": "^1.0.11",
     "html-webpack-plugin": "^2.7.2",
