--- a/tests/.eslintrc
+++ b/tests/.eslintrc
@@ -1,8 +1,17 @@
 {
+  "extends": [
+    "../eslint/eslint-defaults.json",
+    "../eslint/eslint-jsx.json"
+  ],
   "env": {
+    "browser": true,
     "mocha": true
   },
   "globals": {
-    "expect": true
+    "expect": false
+  },
+  "rules": {
+    // expect assertions are commonly unused
+    "no-unused-expressions": 0
   }
 }
