--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "license": "MIT",
   "main": "index.js",
   "scripts": {
-    "build": "NODE_ENV=production webpack --config webpack.config.build.js",
-    "lint": "./node_modules/eslint/bin/eslint.js src",
+    "build": "npm test && NODE_ENV=production webpack --config webpack.config.build.js",
+    "lint": "grunt lint",
     "start": "webpack-dev-server",
-    "test": "karma start --single-run",
+    "test": "grunt test",
     "test-dev": "karma start"
   },
   "devDependencies": {
@@ -33,6 +33,7 @@
     "html-webpack-plugin": "^2.7.2",
     "json-loader": "^0.5.4",
     "karma": "^0.13.19",
+    "karma-browserstack-launcher": "^0.1.9",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^0.2.2",
     "karma-firefox-launcher": "^0.1.7",
