--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "css-loader": "^0.23.1",
     "eslint": "^1.10.3",
     "eslint-plugin-react": "^3.16.1",
+    "exports-loader": "^0.6.3",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "grunt": "^0.4.5",
@@ -48,6 +49,8 @@
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
     "react-intl": "^2.0.0-beta-2",
+    "react-soundjs": "^0.1.3",
+    "script-loader": "^0.6.1",
     "seedrandom": "^2.4.2",
     "style-loader": "^0.13.0",
     "stylus-loader": "^1.5.1",
