--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "postcss-loader": "^0.8.0",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
-    "react-intl": "^2.0.0-beta-2",
+    "react-intl": "^2.0.0-rc-1",
     "react-soundjs": "^0.1.3",
     "script-loader": "^0.6.1",
     "seedrandom": "^2.4.2",
