--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-preset-react-hmre": "^1.0.1",
     "baggage-loader": "^0.2.4",
     "chai": "^3.4.1",
+    "child-compiler-loader-list-webpack-plugin": "^0.1.0",
     "css-loader": "^0.23.1",
     "eslint": "^1.10.3",
     "eslint-plugin-react": "^3.16.1",
