--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "baggage-loader": "^0.2.4",
     "chai": "^3.4.1",
     "child-compiler-loader-list-webpack-plugin": "^0.1.0",
+    "core-js": "^2.2.2",
     "css-loader": "^0.23.1",
     "eslint": "^1.10.3",
     "eslint-plugin-react": "^3.16.1",
@@ -52,6 +53,7 @@
     "offline-plugin": "^2.0.2",
     "postcss-loader": "^0.8.0",
     "react": "^15.0.1",
+    "react-addons-update": "^15.0.1",
     "react-dom": "^15.0.1",
     "react-intl": "^2.0.1",
     "react-soundjs": "^0.1.3",
