--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,5 @@
 {
-  "presets": ["es2015", "react"],
+  "presets": ["es2015-loose", "react"],
   "env": {
     "development": {
       "presets": ["react-hmre"]
