--- a/package.json
+++ b/package.json
@@ -45,7 +45,9 @@
     "karma-ie-launcher": "^0.2.0",
     "karma-mocha": "^0.2.1",
     "karma-safari-launcher": "^0.1.1",
+    "karma-sinon-chai": "^1.2.0",
     "karma-webpack": "^1.7.0",
+    "lolex": "^1.4.0",
     "mocha": "^2.3.4",
     "offline-plugin": "^2.0.2",
     "postcss-loader": "^0.8.0",
@@ -55,6 +57,8 @@
     "react-soundjs": "^0.1.3",
     "script-loader": "^0.6.1",
     "seedrandom": "^2.4.2",
+    "sinon": "^1.17.3",
+    "sinon-chai": "^2.8.0",
     "style-loader": "^0.13.0",
     "stylus-loader": "^1.5.1",
     "webpack": "^1.12.9",
