--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
   },
   "devDependencies": {
     "autoprefixer": "^6.3.1",
-    "babel": "^6.3.26",
-    "babel-core": "^6.4.5",
-    "babel-loader": "^6.2.1",
-    "babel-preset-es2015": "^6.3.13",
+    "babel": "^6.5.2",
+    "babel-core": "^6.7.6",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.6.0",
     "babel-preset-es2015-loose": "^7.0.0",
-    "babel-preset-react": "^6.3.13",
-    "babel-preset-react-hmre": "^1.0.1",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-react-hmre": "^1.1.1",
     "baggage-loader": "^0.2.4",
     "chai": "^3.4.1",
     "child-compiler-loader-list-webpack-plugin": "^0.1.0",
@@ -51,9 +51,9 @@
     "mocha": "^2.3.4",
     "offline-plugin": "^2.0.2",
     "postcss-loader": "^0.8.0",
-    "react": "^0.14.6",
-    "react-dom": "^0.14.6",
-    "react-intl": "^2.0.0-rc-1",
+    "react": "^15.0.1",
+    "react-dom": "^15.0.1",
+    "react-intl": "^2.0.1",
     "react-soundjs": "^0.1.3",
     "script-loader": "^0.6.1",
     "seedrandom": "^2.4.2",
