--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "file-loader": "^0.8.5",
     "grunt": "^0.4.5",
     "grunt-eslint": "^17.3.1",
+    "grunt-jekyll": "^0.4.4",
     "grunt-karma": "^0.12.1",
     "grunt-webpack": "^1.0.11",
     "html-webpack-plugin": "^2.7.2",
