--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-react-hmre": "^1.1.1",
     "baggage-loader": "^0.2.4",
+    "boxart": "0.0.4",
     "chai": "^3.4.1",
     "child-compiler-loader-list-webpack-plugin": "^0.1.0",
     "core-js": "^2.2.2",
@@ -53,7 +54,7 @@
     "mocha": "^2.3.4",
     "offline-plugin": "^2.0.2",
     "postcss-loader": "^0.8.0",
-    "react": "^15.0.1",
+    "react": "^15.0.2",
     "react-addons-update": "^15.0.1",
     "react-dom": "^15.0.1",
     "react-intl": "^2.0.1",
