Document all grunt tasks in README & normalize npm scripts
- Ensure that each registered grunt task is correctly documented
- Ensure that the most relevant grunt tasks all have `npm run` aliases,
  to permit usage without grunt-cli and for developer convenience
- Ensure that the README is consistently linking to the new boxart org's
  repo address, and not the original "rwd-game-boiler" repository
- Ensure that the documentation homepage is sync'd with the readme (is
  there a way to automate this?)

--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "url": "git+https://github.com/boxart/boxart-boiler.git"
   },
   "scripts": {
-    "build": "npm test && NODE_ENV=production webpack --config webpack.config.build.js",
+    "docs": "grunt docs",
+    "build": "grunt build",
     "lint": "grunt lint",
-    "start": "webpack-dev-server",
+    "start": "grunt",
     "test": "grunt test",
     "test-dev": "karma start"
   },
