--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "scripts": {
     "docs": "grunt docs",
+    "docs-dev": "parallelshell 'grunt build-examples-dev' 'grunt jekyll'",
     "build": "grunt build",
     "lint": "grunt lint",
     "start": "grunt",
@@ -59,6 +60,7 @@
     "lolex": "^1.4.0",
     "mocha": "^2.3.4",
     "offline-plugin": "^2.0.2",
+    "parallelshell": "^2.0.0",
     "postcss-loader": "^0.8.0",
     "react": "^15.0.2",
     "react-addons-update": "^15.0.1",
