Configure karma and travis to fallback to Firefox
If a pull request isn't trusted by travis it won't provide the
browserstack credentials as env variables. In that case untrusted pulls
will fallback to testing with Firefox.

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,16 @@ language: node_js
 node_js:
   - "5"
   - "4"
+
 before_script:
+  # Set a display port and start xvfb so firefox has an x server to render into
+  # while testing. Without this Firefox will try to launch but would fail.
+  # Firefox is a fallback for untrusted pulls that won't have access to
+  # browserstack.
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 3 # give xvfb some time to start
   - npm install -g grunt-cli
+
+addons:
+  firefox: "latest"
