--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "grunt": "^0.4.5",
+    "grunt-cli": "^1.2.0",
     "grunt-eslint": "^17.3.1",
     "grunt-jekyll": "^0.4.4",
     "grunt-karma": "^0.12.1",
