--- a/package.json
+++ b/package.json
@@ -73,7 +73,8 @@
     "sinon": "^1.17.3",
     "sinon-chai": "^2.8.0",
     "style-loader": "^0.13.0",
-    "stylus-loader": "^1.5.1",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^2.1.2",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.1"
   }
